make sure news map is visible on small devices

--- a/frontend/css/stylish-portfolio.css
+++ b/frontend/css/stylish-portfolio.css
@@ -235,6 +235,10 @@ hr.small {
     padding-bottom: 0px;
 }
 
+#news_panel{
+    height: 600px;
+}
+
 .clickable
 {
     cursor: pointer;
@@ -246,6 +250,9 @@ hr.small {
 
 @media(max-width: 768px){
     .content{
+        height: 75%;
+    }
+    #news_panel{
         height: 75%;
     }
 }
